fix alignment of logo and body

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@
 }
 
 body {
-    margin: 0;
+    margin: 0 !important;
+    padding: 0 !important;
     font-family: "Raleway";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
